style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
    font-family: 'Roboto';
}

html{
    font-size: 62.5%;
}

.container{
    min-height: 100vh;
    display: grid;
    grid-template: 220px 1.5fr / 1fr 4fr;
}

header{
    padding: 15px 100px;
    position:relative;
    background-color: #ffffff;
    display: grid;
    grid-template-rows: 80px 120px;
    grid-column: 2 / 3;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
}

header .upper {
    padding-right: 20px;
    grid-column: 1 / 3;
    display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    justify-content: space-around;
    font-size: 2rem;
    font-weight: 800;
}

.upper .search, .upper .infor {
    display: flex;
    align-items: center;
    column-gap: 20px;
}

.upper .search{
    width: 100%;
    li input {
        border: none;
        border-radius: 100px;
        background-color: rgba(199, 194, 194, 0.313);
        height: 40px;
        width: 400%;
        padding-left: 20px;
        color: black;
        font-size: 1.4rem;
    }
}

.upper .infor{
    column-gap: 50px;
    justify-self: end;

    li img{
        border-radius: 100px;
    }
    li i {
        font-size: 2.2rem;
    }
}

header .lower{
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-column: 1 / 3;
    column-gap: 120px;

    .infor{
        display: flex;
        align-items: center;
        flex-wrap: wrap;
        column-gap: 10px;

        li img{
            border-radius: 100px;
        }

        ul li{
            font-weight: 600;
        }
        ul li:last-child{
            font-size: 2rem;
            margin-top: 2px;
        }
    }
    

    ul.btn{
        display: flex;
        justify-content: end;
        align-items: center;
        column-gap: 40px;

        button {
            height: 40px;
            width: 100px;
            border: none;
            border-radius: 100px;
            background-color: rgb(25 146 212);
            font-weight: 700;
            font-size: 1.4rem;
            color: #fff;
        }
    }
}


aside{
    background-color: rgb(25 146 212);
    grid-row: 1 / 4;
    min-width: 200px;
    padding: 40px;
    .logo{
        display: flex;
        align-items: center;
        column-gap: 20px;
        li{
            font-size: 4.4rem;
            font-weight: 800;
            color: white;
        }
    }

    .sidebar {
        margin-top: 40px;
        cursor: pointer;
        display: flex;
        flex-direction: column;
        row-gap: 30px;
        li{
            display: flex;
            align-items: center;
            column-gap: 20px;
            font-size: 2rem;
            font-weight: 800;
            color: #fff;
            i{
                font-size: 2.3rem;
            }
            ul {
                margin-top: 60px;
                display: flex;
                flex-direction: column;
                row-gap: 30px;
                align-items: center;
                column-gap: 20px;
                font-size: 2rem;
                font-weight: 800;
                color: #fff;
                i{
                    font-size: 2.3rem;
                }
            }
        }

    }
}

main {
    padding: 80px 35px;
    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: 1fr 1fr;
    background-color: rgb(226 232 240);
    column-gap: 20px;
    row-gap: 80px;
    font-size: 1.6rem;
    grid-row: 2 / 4;
    position: relative;
}

main::before{
    position: absolute;
    font-weight: 700;
    font-size: 1.8rem;
    top: 30px;
    left: 35px;
    content: "Your Projects";
}

main .wrapper {
    display: grid;
    grid-template-columns: repeat(2, minmax(250px, 1fr));
    grid-column: 1 / 2;
    grid-row: 1 / 3;
    gap: 30px;
    grid-auto-rows: 250px;
}

main .wrapper div {
    padding: 30px;
    position: relative;
    background-color: white;
    border-radius: 8px;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 4px 3px 1px;
    display: flex; 
    flex-direction: column;
    justify-content: space-between;
    gap: 20px;
    height: 250px;
    overflow: hidden;
}

main .wrapper div::before{
    top: 0;
    left: 0;
    content: "";
    position: absolute;
    background-color: rgb(240 180 41);
    width: 8px;
    border-bottom-left-radius: 8px;
    border-top-left-radius: 8px;
    height: 100%;
}


main ul.trending, main div.announce {
    position: relative;
    border-radius: 8px;
    background-color: white;
    grid-column: 2 / 3;
    grid-row: auto;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 4px 3px 1px;
    padding: 30px;
}

div.announce::before {
    position: absolute;
    display: block;
    font-weight: 700;
    font-size: 1.8rem;
    top: -50px;
    left: 0;
    content: "Announcements";
}

main .wrapper div > span {
    display: flex;
    justify-content: end;
    column-gap: 22px;
}


.maintenance > p {
    display: block;
    display: -webkit-box;
    overflow: hidden;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    text-overflow: ellipsis;
    color: rgba(0, 0, 0, 0.493);
}

.maintenance {
    padding: 20px 0;
    border-top: 1px solid rgba(0, 0, 0, 0.205);
    border-bottom: 1px solid rgba(0, 0, 0, 0.205);
}

.maintenance:nth-child(odd)
{
    border: none;
}

main ul.trending {
    display: flex;
    justify-content: center;
    flex-direction: column;
    row-gap: 20px;
    li {
        display: flex;
        align-items: center;
        column-gap: 20px;
        img{
            border-radius: 100px;
            object-fit: cover;
            object-position: 25% 100%;
        }

        ul li:last-child{
            color:rgba(0, 0, 0, 0.518);
        }
    }
}

